--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-redux": "^7.1.1",
+    "react-scripts": "3.1.0",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
